data/all_generated_tests/raw_wast_tests/br_table_StackCorruption_2090.wast
;; 10. **Test10: Unexpected Operand Types Post Branching**     - **Description:** After a `br_table` branch, expect specific operand types on the stack and perform operations confirming their integrity.     - **Stack Corruption Check:** Detect incorrect operand types post-branching that indicate stack corruption or type mismatches resulting from the branching logic.

(assert_invalid
  (module (func
    (block
      (block (result i32)
        (block (result i64)
          (br_table 0 1 (i32.const 0) (i32.const 0))
        )
        (i32.const 42)
      )
    )
  ))
  "type mismatch"
)